--- a/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
+++ b/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
@@ -34,13 +34,13 @@
     <PublishUrl>..\..\publish\</PublishUrl>
     <InstallUrl>https://raw.githubusercontent.com/ykinoshi1015/OutlookRecipientConfirmationAddin/develop/publish/</InstallUrl>
     <TargetCulture>ja</TargetCulture>
-    <ApplicationVersion>1.0.0.5</ApplicationVersion>
+    <ApplicationVersion>1.0.0.6</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
     <ProductName>OutlookRecipientConfirmationAddin</ProductName>
-    <PublisherName>RITS 中西悠菜&amp;木下康行</PublisherName>
+    <PublisherName>RITS 中西悠菜&amp;木下康行&amp;小坂健太</PublisherName>
     <SupportUrl />
     <FriendlyName>OutlookRecipientConfirmationAddin</FriendlyName>
     <OfficeApplicationDescription />
