--- a/sourcecode/DoNotDisableAddinUpdater/DoNotDisableAddinUpdater.csproj
+++ b/sourcecode/DoNotDisableAddinUpdater/DoNotDisableAddinUpdater.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{94512222-DCF9-4E22-B4E9-51F90D7B6006}</ProjectGuid>
+    <ProjectGuid>{09C49308-873F-4D95-AFB0-7403BCC3C541}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DoNotDisableAddinUpdaterDll</RootNamespace>
-    <AssemblyName>DoNotDisableAddinUpdaterDll</AssemblyName>
+    <RootNamespace>DoNotDisableAddinUpdater</RootNamespace>
+    <AssemblyName>DoNotDisableAddinUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Outlook, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DoNotDisableAddinUpdaterDllClass.cs" />
+    <Compile Include="DoNotDisableAddinUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
