--- a/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
+++ b/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
@@ -32,7 +32,7 @@
     <IsWebBootstrapper>True</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <PublishUrl>..\..\publish\</PublishUrl>
-    <InstallUrl>https://raw.githubusercontent.com/ykinoshi1015/OutlookRecipientConfirmationAddin/release/v1.0.0.6/publish/</InstallUrl>
+    <InstallUrl>https://raw.githubusercontent.com/ykinoshi1015/OutlookRecipientConfirmationAddin/master/publish/</InstallUrl>
     <TargetCulture>ja</TargetCulture>
     <ApplicationVersion>1.0.0.6</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
