--- a/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
+++ b/sourcecode/OutlookRecipientConfirmationAddin/OutlookRecipientConfirmationAddin.csproj
@@ -32,9 +32,9 @@
     <IsWebBootstrapper>True</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <PublishUrl>..\..\publish\</PublishUrl>
-    <InstallUrl>https://raw.githubusercontent.com/ykinoshi1015/OutlookRecipientConfirmationAddin/master/publish/</InstallUrl>
+    <InstallUrl>https://raw.githubusercontent.com/ykinoshi1015/OutlookRecipientConfirmationAddin/bug/%252386/publish/</InstallUrl>
     <TargetCulture>ja</TargetCulture>
-    <ApplicationVersion>1.1.0.0</ApplicationVersion>
+    <ApplicationVersion>1.1.0.3</ApplicationVersion>
     <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>0</UpdateInterval>
