GetSenderInfomationメソッドのテストコード作成途中（exceptionで失敗）

--- a/sourcecode/ORCAUnitTest/ORCAUnitTest.csproj
+++ b/sourcecode/ORCAUnitTest/ORCAUnitTest.csproj
@@ -91,6 +91,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GetRecipientsUnitTest.cs" />
+    <Compile Include="GetSenderInfomationUnitTest.cs" />
     <Compile Include="MyTestClasses.cs" />
     <Compile Include="GetContactItemUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
